# JamBox

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Justfile  Makefile  docker-compose.override.yml  docker-compose.yml  jambox.md
.serena/: project.yml
backend/: -E-TcRqUkKg.vi.vtt  Dockerfile  Ub464RMEYzM.vi.vtt  as6oBv5rAAo.vi.vtt  demucs_wrapper.py  jSS3LyALY_k.vi.vtt  pyproject.toml  vbicK6VMEiA.vi.vtt
backend/app/: config.py  database.py  main.py
backend/app/audio/: chord_detection.py  helpers.py  lyrics_alignment.py  lyrics_detection.py  lyrics_fetch.py  router.py
backend/app/auth/: dependencies.py  router.py
backend/app/favourites/: repository.py  router.py
backend/app/songs/: repository.py  router.py  service.py
backend/app/tasks/: pipeline.py  pubsub.py  repository.py  router.py  worker.py
docs/: ARCHITECTURE.md  HOT-LOADING.md  SPECIFICATIONS.md  TECHNOTES-downbeats-detection.md  UI-DESIGN.md  USER-GUIDE.md
frontend/: Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/contexts/: PlayerContext.tsx
frontend/src/hooks/: useCustomAudioPlayer.ts  useMultiStemPlayer.ts  useTaskPolling.ts
frontend/src/lib/: constants.ts  musicTheory.ts
workers/analyzer/: Dockerfile  main.py  pipeline.py  pyproject.toml  requirements.txt
workers/analyzer/app/: config.py  models.py
workers/analyzer/app/audio/: beat_tracking.py  chord_detection.py  router.py
workers/analyzer/app/songs/: router.py
workers/analyzer/app/tasks/: repository.py
workers/fetcher/: Dockerfile  main.py  pipeline.py  pyproject.toml  requirements.txt
workers/fetcher/app/: database.py
workers/fetcher/app/tasks/: worker.py
workers/transcriber/: Dockerfile  main.py  pyproject.toml  requirements.txt
workers/transcriber-cuda/: Dockerfile  main.py  requirements.txt
workers/transcriber/app/: redis_client.py
workers/transcriber/app/audio/: hf_transcribe_worker.py  lyrics_alignment.py  lyrics_detection.py  lyrics_fetch.py
workers/transcriber/app/songs/: service.py
workers/transcriber/app/tasks/: pipeline.py  pubsub.py  repository.py  router.py
(+43 files in other folders)
