[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jambox-analyzer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "redis[hiredis]>=5.0",
    "aiosqlite>=0.20",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "aiofiles>=23.2",
    "librosa>=0.10",
    "soundfile>=0.12",
    "demucs>=4.0",
    "torch>=2.0",
    "torchaudio>=2.0",
    "madmom @ git+https://github.com/CPJKU/madmom@main",
]

[tool.setuptools.packages.find]
where = ["."]