[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jambox-fetcher"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "redis[hiredis]>=5.0",
    "aiosqlite>=0.20",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "aiofiles>=23.2",
    "yt-dlp>=2024.1",
]

[tool.setuptools.packages.find]
where = ["."]
